# python-cookiecutter

./: .gitignore  LICENSE.md  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  LICENSE.md  README.md  justfile  pyproject.toml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py  app.py
{{ cookiecutter.project_slug }}/tests/: __init__.py  test_imports.py
